--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.js"></script>
     <script src="sketch.js"></script>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <main>
     </main>
   </body>
